Improved doc and example.

--- a/example/views/product.jade
+++ b/example/views/product.jade
@@ -53,6 +53,9 @@ html
         p You will really soon receive an email containing your download link!
         p The email was sent to <strong>#{email}</strong>.
         p If you do not receive the email, please check your spam folder.
+        p Your can download your file here:
+        p
+          a(href=url) #{url}
         p Do not hesitate to contact us on support@foo.com if you experience any problem!
         p Cheers.
         p Laurent.
